refactor(ci): drop git ls-remote — use workflow_dispatch input + the-phoenix-project special case
- Replace git ls-remote probe with a three-way branch selector:
  workflow_dispatch → explicit input (default main),
  the-phoenix-project → always test against matching plugin branch,
  everything else → main.
- Simplify dependabot third-party-actions group to patterns: ["*"]; first-party
  groups claim their entries first so the wildcard catches the remainder.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>